# First-Cmake

./: CMakeLists.txt
build-DBUILD_TESTING=1/: hello_cmake
build-ninja/: build.ninja
src/: main.cpp
